// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxAccordion customize 1`] = `
<div>
  <div
    class="accordion bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxAccordion component 1`] = `
<div>
  <div
    class="accordion"
  >
    Test
  </div>
</div>
`;
